Replace logo image source in index.html

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="container nav-container">
             <a href="#" class="logo">
                 <!-- BYT UT SRC TILL DIN LOGGA-FIL -->
-                <img src="assets/logos/brytpunkten-logo.svg" alt="Brytpunkten Logga" height="40">
+                <img src="logga.png" alt="Brytpunkten" height="30" class="footer-logo">
             </a>
             <div class="nav-links">
                 <a href="#verksamhet">Verksamhet</a>
