--- a/index.html
+++ b/index.html
@@ -1,129 +1,62 @@
 <!DOCTYPE html>
 <html lang="sv">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Brytpunkten | När vi bryter mönster</title>
-    <meta name="description" content="En ideell förening som bryter sociala och kriminella mönster.">
-    <link rel="stylesheet" href="style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Min Hemsida</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!-- Navigation EXAKT som Jourhavande -->
-    <header class="header">
-        <div class="container header-container">
-            <a href="/" class="logo">
-                <img src="logo.png" alt="Brytpunkten" width="140" height="45">
-                <span class="logo-subtitle">När vi bryter mönster</span>
-            </a>
-            <nav class="main-nav">
-                <a href="#om-oss">Om oss</a>
-                <a href="#verksamhet">Verksamhet</a>
-                <a href="#kontakt" class="nav-btn">Kontakt</a>
-            </nav>
-            <button class="mobile-menu-btn" aria-label="Öppna meny">☰</button>
-        </div>
-    </header>
+  <header>
+    <div class="logo">Min Hemsida</div>
+    <nav>
+      <ul>
+        <li><a href="#about">Om oss</a></li>
+        <li><a href="#services">Tjänster</a></li>
+        <li><a href="#contact">Kontakt</a></li>
+      </ul>
+    </nav>
+  </header>
 
-    <!-- Hero EXAKT som Jourhavande men bättre -->
-    <section class="hero">
-        <div class="container">
-            <div class="hero-content">
-                <h1 class="hero-title">Brytning av sociala och kriminella mönster</h1>
-                <p class="hero-lead">En ideell förening som stöttar vuxna ur kriminalitet och förebygger brott bland unga.</p>
-                <div class="hero-actions">
-                    <a href="#kontakt" class="btn btn-primary">Behöver du stöd?</a>
-                    <a href="#stod" class="btn btn-secondary">Stöd vårt arbete</a>
-                </div>
-            </div>
-        </div>
-    </section>
+  <section class="hero">
+    <h1>Välkommen till vår hemsida</h1>
+    <p>Här kan du lägga till en kort beskrivning</p>
+    <a href="#contact" class="btn">Kontakta oss</a>
+  </section>
 
-    <!-- Innehåll EXAKT som Jourhavande struktur -->
-    <main class="main-content">
-        <section class="content-section" id="om-oss">
-            <div class="container">
-                <h2>Vår verksamhet</h2>
-                <p class="section-lead">Brytpunkten är en ideell förening med socialt och brottsförebyggande syfte. Vi arbetar med vuxna personer med kriminell bakgrund samt med förebyggande insatser för unga i riskmiljöer.</p>
-                
-                <div class="features-grid">
-                    <div class="feature">
-                        <h3>För vuxna</h3>
-                        <p>Individuellt stöd och motivation till personer som vill lämna kriminaliteten. Praktisk hjälp med boende, arbete och kontakt med myndigheter.</p>
-                    </div>
-                    <div class="feature">
-                        <h3>För unga</h3>
-                        <p>Förebyggande insatser, skolbesök och workshops för att stoppa kriminalitet innan den börjar. Information om konsekvenser och alternativ.</p>
-                    </div>
-                    <div class="feature">
-                        <h3>Samverkan</h3>
-                        <p>Täta samarbeten med myndigheter, frivården, socialtjänsten och lokala organisationer för störst möjliga påverkan.</p>
-                    </div>
-                </div>
-            </div>
-        </section>
+  <section id="about">
+    <h2>Om oss</h2>
+    <p>Information om verksamheten…</p>
+  </section>
 
-        <section class="content-section bg-light" id="verksamhet">
-            <div class="container">
-                <h2>Vår metod</h2>
-                <div class="method-list">
-                    <div class="method-item">
-                        <h3>Strukturerat stöd</h3>
-                        <p>Alla insatser dokumenteras och följs upp för att säkerställa kvalitet och måluppfyllelse.</p>
-                    </div>
-                    <div class="method-item">
-                        <h3>Individanpassat</h3>
-                        <p>Varje persons situation är unik. Vi skapar individuella planer med fokus på motivation och långsiktig förändring.</p>
-                    </div>
-                    <div class="method-item">
-                        <h3>Preventivt fokus</h3>
-                        <p>Genom tidiga insatser riktade till unga kan vi förebygga problem innan de uppstår.</p>
-                    </div>
-                </div>
-            </div>
-        </section>
+  <section id="services">
+    <h2>Tjänster</h2>
+    <div class="cards">
+      <div class="card">
+        <h3>Tjänst 1</h3>
+        <p>Beskrivning av tjänst 1</p>
+      </div>
+      <div class="card">
+        <h3>Tjänst 2</h3>
+        <p>Beskrivning av tjänst 2</p>
+      </div>
+    </div>
+  </section>
 
-        <section class="content-section" id="kontakt">
-            <div class="container">
-                <h2>Kontakt</h2>
-                <div class="contact-info">
-                    <div class="contact-item">
-                        <strong>Allmänna frågor</strong>
-                        <a href="mailto:kontakt@brytpunkten.org">kontakt@brytpunkten.org</a>
-                    </div>
-                    <div class="contact-item">
-                        <strong>För samverkan</strong>
-                        <a href="mailto:samverkan@brytpunkten.org">samverkan@brytpunkten.org</a>
-                    </div>
-                </div>
-                <p class="contact-note">Vi återkommer inom 24 timmar på vardagar.</p>
-            </div>
-        </section>
-    </main>
+  <section id="contact">
+    <h2>Kontakt</h2>
+    <form>
+      <input type="text" placeholder="Namn" required>
+      <input type="email" placeholder="E-post" required>
+      <textarea placeholder="Meddelande" required></textarea>
+      <button type="submit">Skicka</button>
+    </form>
+  </section>
 
-    <!-- Footer EXAKT som Jourhavande -->
-    <footer class="footer">
-        <div class="container">
-            <div class="footer-content">
-                <div class="footer-logo">
-                    <img src="logo.png" alt="Brytpunkten" width="120" height="38">
-                    <p>Ideell förening<br>När vi bryter mönster</p>
-                </div>
-                <div class="footer-links">
-                    <a href="#om-oss">Om oss</a>
-                    <a href="#verksamhet">Verksamhet</a>
-                    <a href="#kontakt">Kontakt</a>
-                    <a href="#integritet">Integritetspolicy</a>
-                </div>
-            </div>
-            <div class="footer-bottom">
-                <p>&copy; <span id="current-year">2024</span> Brytpunkten. Alla rättigheter förbehållna.</p>
-            </div>
-        </div>
-    </footer>
+  <footer>
+    <p>© 2026 Min Hemsida</p>
+  </footer>
 
-    <script src="script.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
