--- a/index.html
+++ b/index.html
@@ -3,14 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Min Hemsida</title>
+  <title>Brytpunkten - Kopia</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <!-- HEADER -->
   <header>
-    <div class="logo">Min Hemsida</div>
+    <div class="logo">Brytpunkten</div>
     <nav>
       <ul>
+        <li><a href="#home">Hem</a></li>
         <li><a href="#about">Om oss</a></li>
         <li><a href="#services">Tjänster</a></li>
         <li><a href="#contact">Kontakt</a></li>
@@ -18,19 +20,24 @@
     </nav>
   </header>
 
-  <section class="hero">
-    <h1>Välkommen till vår hemsida</h1>
-    <p>Här kan du lägga till en kort beskrivning</p>
-    <a href="#contact" class="btn">Kontakta oss</a>
+  <!-- HERO SECTION -->
+  <section class="hero" id="home">
+    <div class="hero-overlay">
+      <h1>Välkommen till Brytpunkten</h1>
+      <p>Din guide till stöd och hjälp i utsatta situationer</p>
+      <a href="#contact" class="btn">Kontakta oss</a>
+    </div>
   </section>
 
-  <section id="about">
+  <!-- ABOUT SECTION -->
+  <section id="about" class="section">
     <h2>Om oss</h2>
-    <p>Information om verksamheten…</p>
+    <p>Här kan du skriva om verksamheten, teamet eller syftet med Brytpunkten. Denna text är en placeholder som du kan byta ut.</p>
   </section>
 
-  <section id="services">
-    <h2>Tjänster</h2>
+  <!-- SERVICES SECTION -->
+  <section id="services" class="section">
+    <h2>Våra tjänster</h2>
     <div class="cards">
       <div class="card">
         <h3>Tjänst 1</h3>
@@ -40,10 +47,15 @@
         <h3>Tjänst 2</h3>
         <p>Beskrivning av tjänst 2</p>
       </div>
+      <div class="card">
+        <h3>Tjänst 3</h3>
+        <p>Beskrivning av tjänst 3</p>
+      </div>
     </div>
   </section>
 
-  <section id="contact">
+  <!-- CONTACT SECTION -->
+  <section id="contact" class="section">
     <h2>Kontakt</h2>
     <form>
       <input type="text" placeholder="Namn" required>
@@ -53,8 +65,9 @@
     </form>
   </section>
 
+  <!-- FOOTER -->
   <footer>
-    <p>© 2026 Min Hemsida</p>
+    <p>© 2026 Brytpunkten</p>
   </footer>
 
   <script src="script.js"></script>
