--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
         <div class="nav-container">
             <a href="#" class="logo-link">
                 <img src="logo.png" alt="Brytpunkten logotyp" class="logo">
-                <span class="logo-text">Brytpunkten</span>
             </a>
             <ul class="nav-menu" id="navMenu">
                 <li><a href="#hero">Hem</a></li>
@@ -37,11 +36,10 @@
         <div class="hero-overlay"></div>
         <img src="hero-image.jpg" alt="Brytpunkten - En väg framåt" class="hero-bg-image">
         <div class="hero-content">
-            <h1>En brytpunkt för ett liv utanför kriminaliteten</h1>
+            <h1>Bryter mönster, bygger framtid</h1>
             <p class="hero-subtitle">Brytpunkten är en ideell förening med socialt och brottsförebyggande syfte. Vi stöttar vuxna med kriminell bakgrund och arbetar förebyggande med unga i riskmiljöer.</p>
             <div class="hero-buttons">
-                <a href="#services" class="button button-primary">Våra insatser</a>
-                <a href="#contact" class="button button-secondary">Bli en partner</a>
+                <a href="#contact" class="button button-primary">Bli en partner</a>
             </div>
         </div>
     </section>
@@ -54,22 +52,22 @@
 
             <div class="services-grid">
                 <div class="service-card">
-                    <div class="service-icon">👥</div>
+                    <div class="service-icon">🔄</div>
                     <h3>Individuellt stöd till vuxna</h3>
                     <p>Strukturerade samtal med fokus på motivation, ansvarstagande och livsval. Praktisk hjälp med boende, ekonomi och myndighetskontakter. Kris- och återfallsprevention.</p>
                 </div>
                 <div class="service-card">
-                    <div class="service-icon">💼</div>
+                    <div class="service-icon">💪</div>
                     <h3>Arbete & samhällsetablering</h3>
                     <p>Stöd med CV, jobbsökning, praktik och utbildning. Mentorer med erfarenhet av liknande utmaningar ger kontinuerligt stöd och motivation.</p>
                 </div>
                 <div class="service-card">
-                    <div class="service-icon">🛡️</div>
+                    <div class="service-icon">🧠</div>
                     <h3>Förebyggande insatser för unga</h3>
                     <p>Skolbesök, workshops och gruppsamtal i riskmiljöer. Informerar om konsekvenser och motiverar till positiva val, utbildning och meningsfull fritid.</p>
                 </div>
                 <div class="service-card">
-                    <div class="service-icon">🤝</div>
+                    <div class="service-icon">🌐</div>
                     <h3>Samverkan & nätverk</h3>
                     <p>Aktivt samarbete med myndigheter, frivård, socialtjänst och lokala organisationer. Ett rådgivande nätverk med expertis inom socialt arbete, juridik och psykologi.</p>
                 </div>
@@ -91,7 +89,6 @@
                     </blockquote>
                 </div>
                 <div class="about-image">
-                    <!-- En platshållare eller en framtida bild. Kan ersättas med en CSS-bakgrundsfärg eller bild. -->
                     <div class="image-placeholder"></div>
                 </div>
             </div>
@@ -116,7 +113,6 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-logo">
-                    <img src="logo.png" alt="Brytpunkten logotyp" class="logo">
                     <span class="logo-text">Brytpunkten</span>
                 </div>
                 <p class="footer-mission">En ideell förening med socialt och brottsförebyggande syfte. Partipolitiskt och religiöst obunden.</p>
