--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <div class="hero-overlay"></div>
         <img src="hero-image.jpg" alt="Brytpunkten - En väg framåt" class="hero-bg-image">
         <div class="hero-content">
-            <h1>Bryter mönster, bygger framtid</h1>
+            <h1>När vi bryter mönster</h1>
             <p class="hero-subtitle">Brytpunkten är en ideell förening med socialt och brottsförebyggande syfte. Vi stöttar vuxna med kriminell bakgrund och arbetar förebyggande med unga i riskmiljöer.</p>
             <div class="hero-buttons">
                 <a href="#contact" class="button button-primary">Bli en partner</a>
