--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <li><a href="#about">Om oss</a></li>
                 <li><a href="#contact" class="nav-cta-button">Kontakta oss</a></li>
             </ul>
-            <button class="hamburger" id="hamburger">
+            <button class="hamburger" id="hamburger" aria-label="Meny">
                 <span></span>
                 <span></span>
                 <span></span>
@@ -40,6 +40,7 @@
             <p class="hero-subtitle">Brytpunkten är en ideell förening med socialt och brottsförebyggande syfte. Vi stöttar vuxna med kriminell bakgrund och arbetar förebyggande med unga i riskmiljöer.</p>
             <div class="hero-buttons">
                 <a href="#contact" class="button button-primary">Bli en partner</a>
+                <a href="#services" class="button button-secondary">Våra insatser</a>
             </div>
         </div>
     </section>
@@ -52,24 +53,44 @@
 
             <div class="services-grid">
                 <div class="service-card">
-                    <div class="service-icon">🔄</div>
+                    <div class="service-number">01</div>
                     <h3>Individuellt stöd till vuxna</h3>
                     <p>Strukturerade samtal med fokus på motivation, ansvarstagande och livsval. Praktisk hjälp med boende, ekonomi och myndighetskontakter. Kris- och återfallsprevention.</p>
+                    <ul class="service-features">
+                        <li>Personcentrerad uppföljning</li>
+                        <li>Långsiktigt stöd</li>
+                        <li>Praktisk hjälpverksamhet</li>
+                    </ul>
                 </div>
                 <div class="service-card">
-                    <div class="service-icon">💪</div>
+                    <div class="service-number">02</div>
                     <h3>Arbete & samhällsetablering</h3>
                     <p>Stöd med CV, jobbsökning, praktik och utbildning. Mentorer med erfarenhet av liknande utmaningar ger kontinuerligt stöd och motivation.</p>
+                    <ul class="service-features">
+                        <li>Jobb- och praktikförmedling</li>
+                        <li>Mentorsprogram</li>
+                        <li>Kompetensutveckling</li>
+                    </ul>
                 </div>
                 <div class="service-card">
-                    <div class="service-icon">🧠</div>
+                    <div class="service-number">03</div>
                     <h3>Förebyggande insatser för unga</h3>
                     <p>Skolbesök, workshops och gruppsamtal i riskmiljöer. Informerar om konsekvenser och motiverar till positiva val, utbildning och meningsfull fritid.</p>
+                    <ul class="service-features">
+                        <li>Skol- och ungdomsinsatser</li>
+                        <li>Workshops och föreläsningar</li>
+                        <li>Gruppstöd</li>
+                    </ul>
                 </div>
                 <div class="service-card">
-                    <div class="service-icon">🌐</div>
+                    <div class="service-number">04</div>
                     <h3>Samverkan & nätverk</h3>
                     <p>Aktivt samarbete med myndigheter, frivård, socialtjänst och lokala organisationer. Ett rådgivande nätverk med expertis inom socialt arbete, juridik och psykologi.</p>
+                    <ul class="service-features">
+                        <li>Myndighetssamverkan</li>
+                        <li>Expertrådgivning</li>
+                        <li>Nätverksbyggande</li>
+                    </ul>
                 </div>
             </div>
         </div>
@@ -84,12 +105,29 @@
                     <p>Brytpunkten är en <strong>partipolitiskt och religiöst obunden</strong> ideell förening. Vår verksamhet bygger på erfarenhet, evidens och ett starkt nätverk.</p>
                     <p>Vi bedriver <strong>inte vård, behandling eller myndighetsutövning</strong>. Vår roll är att vara en stödjande och motiverande resurs som arbetar i tät samverkan med de ansvariga aktörerna i samhället.</p>
                     <p>All vår verksamhet dokumenteras och följs upp systematisk för att säkerställa kvalitet och måluppfyllelse. Vår ambition är att på sikt kunna skala upp våra beprövade insatser i fler samhällen.</p>
-                    <blockquote class="about-quote">
-                        "Kort sagt stöttar Brytpunkten individer praktiskt och socialt, minskar risken för återfall i kriminalitet och sprider kunskap och motivation till unga som riskerar att hamna i samma mönster."
-                    </blockquote>
+                    <div class="about-quote">
+                        <p>"Kort sagt stöttar Brytpunkten individer praktiskt och socialt, minskar risken för återfall i kriminalitet och sprider kunskap och motivation till unga som riskerar att hamna i samma mönster."</p>
+                    </div>
                 </div>
                 <div class="about-image">
-                    <div class="image-placeholder"></div>
+                    <div class="about-stats">
+                        <div class="stat-item">
+                            <div class="stat-number">100%</div>
+                            <div class="stat-label">Ideell förening</div>
+                        </div>
+                        <div class="stat-item">
+                            <div class="stat-number">Partipolitiskt</div>
+                            <div class="stat-label">Obunden</div>
+                        </div>
+                        <div class="stat-item">
+                            <div class="stat-number">Evidensbaserat</div>
+                            <div class="stat-label">Arbete</div>
+                        </div>
+                        <div class="stat-item">
+                            <div class="stat-number">Samverkan</div>
+                            <div class="stat-label">I fokus</div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -102,7 +140,10 @@
                 <h2 class="section-title">Vill du veta mer eller samarbeta?</h2>
                 <p class="contact-text">Brytpunkten söker alltid konstruktiva partnerskap med kommuner, myndigheter, företag och andra organisationer som vill bidra till ett brottsförebyggande arbete.</p>
                 <p class="contact-text"><strong>Vi är här för att göra skillnad.</strong> Tillsammans kan vi skapa fler brytpunkter.</p>
-                <a href="mailto:kontakt@brytpunkten.example.org" class="button button-primary button-large">Kontakta oss via e-post</a>
+                <div class="contact-buttons">
+                    <a href="mailto:kontakt@brytpunkten.example.org" class="button button-primary button-large">Kontakta oss via e-post</a>
+                    <a href="#services" class="button button-outline">Läs om vårt arbete</a>
+                </div>
                 <p class="contact-note">(Ersätt med er riktiga e-postadress)</p>
             </div>
         </div>
@@ -113,6 +154,7 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-logo">
+                    <img src="logo.png" alt="Brytpunkten logotyp" class="footer-logo-img">
                     <span class="logo-text">Brytpunkten</span>
                 </div>
                 <p class="footer-mission">En ideell förening med socialt och brottsförebyggande syfte. Partipolitiskt och religiöst obunden.</p>
