--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     <link rel="icon" type="image/x-icon" href="logo.png">
 </head>
 <body>
-    <!-- Navigation -->
     <nav class="navbar">
         <div class="nav-container">
             <a href="#" class="logo-link">
@@ -31,21 +30,14 @@
         </div>
     </nav>
 
-    <!-- Hero Section -->
+    <!-- Hero Section - ÄNDRING 1 & 2: Bildjustering & Text Borttagen -->
     <section class="hero" id="hero">
         <div class="hero-overlay"></div>
         <img src="hero-image.jpg" alt="Brytpunkten - En väg framåt" class="hero-bg-image">
-        <div class="hero-content">
-            <h1>När vi bryter mönster</h1>
-            <p class="hero-subtitle">Brytpunkten är en ideell förening med socialt och brottsförebyggande syfte. Vi stöttar vuxna med kriminell bakgrund och arbetar förebyggande med unga i riskmiljöer.</p>
-            <div class="hero-buttons">
-                <a href="#contact" class="button button-primary">Bli en partner</a>
-                <a href="#services" class="button button-secondary">Våra insatser</a>
-            </div>
-        </div>
+        <!-- HERO-TEXTEN ÄR NU BARA I CANVA-BILDEN -->
     </section>
 
-    <!-- Services / Vad vi gör -->
+    <!-- Services Section - ÄNDRING 3: Moderna tjänsterutor utan siffror -->
     <section class="services" id="services">
         <div class="container">
             <h2 class="section-title">Vårt arbete för ett säkrare samhälle</h2>
@@ -53,9 +45,8 @@
 
             <div class="services-grid">
                 <div class="service-card">
-                    <div class="service-number">01</div>
                     <h3>Individuellt stöd till vuxna</h3>
-                    <p>Strukturerade samtal med fokus på motivation, ansvarstagande och livsval. Praktisk hjälp med boende, ekonomi och myndighetskontakter. Kris- och återfallsprevention.</p>
+                    <p>Strukturerade samtal med fokus på motivation, ansvarstagande och livsval. Praktisk hjälp med boende, ekonomi och myndighetskontakter.</p>
                     <ul class="service-features">
                         <li>Personcentrerad uppföljning</li>
                         <li>Långsiktigt stöd</li>
@@ -63,9 +54,8 @@
                     </ul>
                 </div>
                 <div class="service-card">
-                    <div class="service-number">02</div>
                     <h3>Arbete & samhällsetablering</h3>
-                    <p>Stöd med CV, jobbsökning, praktik och utbildning. Mentorer med erfarenhet av liknande utmaningar ger kontinuerligt stöd och motivation.</p>
+                    <p>Stöd med CV, jobbsökning, praktik och utbildning. Mentorer med erfarenhet av liknande utmaningar ger kontinuerligt stöd.</p>
                     <ul class="service-features">
                         <li>Jobb- och praktikförmedling</li>
                         <li>Mentorsprogram</li>
@@ -73,9 +63,8 @@
                     </ul>
                 </div>
                 <div class="service-card">
-                    <div class="service-number">03</div>
                     <h3>Förebyggande insatser för unga</h3>
-                    <p>Skolbesök, workshops och gruppsamtal i riskmiljöer. Informerar om konsekvenser och motiverar till positiva val, utbildning och meningsfull fritid.</p>
+                    <p>Skolbesök, workshops och gruppsamtal i riskmiljöer. Informerar om konsekvenser och motiverar till positiva val och meningsfull fritid.</p>
                     <ul class="service-features">
                         <li>Skol- och ungdomsinsatser</li>
                         <li>Workshops och föreläsningar</li>
@@ -83,9 +72,8 @@
                     </ul>
                 </div>
                 <div class="service-card">
-                    <div class="service-number">04</div>
                     <h3>Samverkan & nätverk</h3>
-                    <p>Aktivt samarbete med myndigheter, frivård, socialtjänst och lokala organisationer. Ett rådgivande nätverk med expertis inom socialt arbete, juridik och psykologi.</p>
+                    <p>Aktivt samarbete med myndigheter, frivård, socialtjänst och lokala organisationer. Ett rådgivande nätverk med expertis.</p>
                     <ul class="service-features">
                         <li>Myndighetssamverkan</li>
                         <li>Expertrådgivning</li>
@@ -96,7 +84,7 @@
         </div>
     </section>
 
-    <!-- About Section -->
+    <!-- About Section - ÄNDRING 4: Nytt "Principer"-block -->
     <section class="about" id="about">
         <div class="container">
             <div class="about-grid">
@@ -108,32 +96,31 @@
                     <div class="about-quote">
                         <p>"Kort sagt stöttar Brytpunkten individer praktiskt och socialt, minskar risken för återfall i kriminalitet och sprider kunskap och motivation till unga som riskerar att hamna i samma mönster."</p>
                     </div>
+                    <!-- NYTT PRINCIPER-BLOCK med myndighetskänsla -->
+                    <div class="principles-block">
+                        <h4>Våra principer och fokus</h4>
+                        <div class="principles-grid">
+                            <div class="principle-item">Ideell förening</div>
+                            <div class="principle-item">Partipolitiskt obunden</div>
+                            <div class="principle-item">Evidensbaserat arbete</div>
+                            <div class="principle-item">Samverkan i fokus</div>
+                            <div class="principle-item">Praktiskt stöd</div>
+                            <div class="principle-item">Långsiktighet</div>
+                            <div class="principle-item">Människan i centrum</div>
+                            <div class="principle-item">Resultatorienterat</div>
+                        </div>
+                    </div>
                 </div>
                 <div class="about-image">
-                    <div class="about-stats">
-                        <div class="stat-item">
-                            <div class="stat-number">100%</div>
-                            <div class="stat-label">Ideell förening</div>
-                        </div>
-                        <div class="stat-item">
-                            <div class="stat-number">Partipolitiskt</div>
-                            <div class="stat-label">Obunden</div>
-                        </div>
-                        <div class="stat-item">
-                            <div class="stat-number">Evidensbaserat</div>
-                            <div class="stat-label">Arbete</div>
-                        </div>
-                        <div class="stat-item">
-                            <div class="stat-number">Samverkan</div>
-                            <div class="stat-label">I fokus</div>
-                        </div>
+                    <!-- Denna sida är nu tom - vi kan lägga till en relevant bild här senare -->
+                    <div class="image-placeholder">
+                        <p>Plats för bild eller visuellt element</p>
                     </div>
                 </div>
             </div>
         </div>
     </section>
 
-    <!-- CTA / Contact Section -->
     <section class="contact" id="contact">
         <div class="container">
             <div class="contact-box">
@@ -149,7 +136,6 @@
         </div>
     </section>
 
-    <!-- Footer -->
     <footer class="footer">
         <div class="container">
             <div class="footer-content">
